[tool.poetry]
name = "pyfrenet"
version = "0.1.0"
description = ""
authors = ["Marat Kopytjuk <kopytjuk@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.25.2"
scipy = "^1.11.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
ipykernel = "^6.25.1"
matplotlib = "^3.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
